src/objects/Merchandise__c.object
<CustomObject>
    <description>blah blah blah!</description>
    <fields>
        <fullName>Merchandise_Type__c</fullName>
        <label>Merchandise Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise</pluralLabel>
    <recordTypes>
        <fullName>MerchandiseRecordTypeForTest</fullName>
        <active>true</active>
        <label>MerchandiseRecordTypeForTest</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>